<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppMainLayout">

    <android.support.v7.widget.CardView
        style="@style/AppCard"
        app:cardBackgroundColor="@color/lightPrimaryColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp">

        <LinearLayout
            style="@style/AppCardLayout">

            <TextView
                style="@style/AppQuestionHeader"
                android:text="@string/app_set_1_question_6_header" />

            <TextView
                style="@style/AppQuestionSubheader"
                android:text="@string/app_set_1_question_6_subheader" />

            <ScrollView
                style="@style/AppQuestionScroll" >

                <LinearLayout
                    android:gravity="center"
                    style="@style/AppImageQuestionLayout" >

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/activity_paragraph_size"
                        android:text="@string/app_set_1_question_6_text" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/answer_1"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/app_set_1_question_6_radio_1"/>

                        <RadioButton
                            android:id="@+id/answer_2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/app_set_1_question_6_radio_2"/>

                        <RadioButton
                            android:id="@+id/answer_3"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/app_set_1_question_6_radio_3"/>

                        <RadioButton
                            android:id="@+id/answer_4"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/app_set_1_question_6_radio_4"/>

                        <RadioButton
                            android:id="@+id/answer_5"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/app_set_1_question_6_radio_5"/>

                        <RadioButton
                            android:id="@+id/answer_6"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/app_set_1_question_6_radio_6"/>


                    </RadioGroup>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/AppActionButton"
        android:onClick="activityQuizSetQuestion7"
        android:text="@string/button_answer"/>

</LinearLayout>