<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppMainLayout">

    <android.support.v7.widget.CardView
        style="@style/AppCard"
        app:cardBackgroundColor="@color/lightPrimaryColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp">

        <LinearLayout style="@style/AppCardLayout">

            <TextView
                style="@style/AppQuestionHeader"
                android:text="@string/app_set_1_question_1_header" />

            <TextView
                style="@style/AppQuestionSubheader"
                android:text="@string/app_set_1_question_1_subheader" />

            <ScrollView style="@style/AppQuestionScroll">

                <TextView
                    style="@style/AppQuestionText"
                    android:text="@string/app_set_1_question_1_text" />

            </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout style="@style/AppActionLayout">

        <EditText
            android:id="@+id/answer"
            style="@style/AppActionInput"
            android:hint="@string/button_answer" />

        <Button
            style="@style/AppActionButton"
            android:onClick="activityQuizSetQuestion2"
            android:text="@string/button_answer" />

    </LinearLayout>

</LinearLayout>