<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppMainLayout">

    <android.support.v7.widget.CardView
        style="@style/AppCard"
        app:cardBackgroundColor="@color/lightPrimaryColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp">

        <LinearLayout
            style="@style/AppCardLayout">

            <TextView
                style="@style/AppQuestionHeader"
                android:text="@string/app_set_1_question_5_header" />

            <TextView
                style="@style/AppQuestionSubheader"
                android:text="@string/app_set_1_question_5_subheader" />

            <ScrollView
                style="@style/AppQuestionScroll" >

                <LinearLayout
                    style="@style/AppImageQuestionLayout" >

                    <ImageView
                        style="@style/AppQuestionImage"
                        android:src="@drawable/ic_black_box" />

                    <TextView
                        style="@style/AppQuestionText"
                        android:text="@string/app_set_1_question_5_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:src="@drawable/ic_music_player" />

                        <Button
                            android:id="@+id/play_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:backgroundTint="@color/colorPrimary"
                            android:text="@string/app_set_1_question_5_media_1"
                            android:onClick="setMedia1"
                            android:textColor="@color/textIcons" />

                        <Button
                            android:id="@+id/play_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:text="@string/app_set_1_question_5_media_2"
                            android:onClick="setMedia2"
                            android:textColor="@color/textIcons" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        style="@style/AppActionLayout">

        <EditText
            android:id="@+id/answer"
            style="@style/AppActionInput"
            android:hint="@string/button_answer" />

        <Button
            style="@style/AppActionButton"
            android:onClick="activityQuizSetQuestion6"
            android:text="@string/button_answer"/>

    </LinearLayout>

</LinearLayout>