<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dividerSecondaryColor"
    android:orientation="vertical"
    tools:context="com.example.cchiv.wwwwhatwherewhen.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightPrimaryColor"
                android:orientation="vertical">

                <TextView
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textSize="12sp"
                    android:text="@string/app_quote_text"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_owl"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/activity_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:backgroundTint="@color/textIcons"
                    android:text="@string/app_play_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dividerSecondaryColor"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:gravity="center_horizontal"
                        android:textColor="@color/primaryText"
                        android:textSize="24sp"
                        android:text="Question Of The Day"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:text="@string/app_question_1_text"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:textColorHighlight="@color/colorPrimaryDark"
                            android:textColor="@color/primaryText"
                            android:backgroundTint="@color/textIcons"
                            android:text="@string/app_hint_text"
                            android:onClick="show_hint"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:backgroundTint="@color/textIcons"
                            android:textColor="@color/primaryText"
                            android:textColorHighlight="@color/colorPrimaryDark"
                            android:text="@string/app_solution_text"
                            android:onClick="show_solution"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_solution"
                        android:layout_width="340dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textSize="14sp"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone"
                        android:text="@string/app_question_1_solution_text"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/activity_achievements"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_achievements"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_achievements_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_feedback"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_statistics_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_help"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_help"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_help_text"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
